# vortex-sensor-fusion

./: .gitignore  README.md
Listeners/: CMakeLists.txt  package.xml
Listeners/include/pcl_detector/detectors/: euclidian_clustering.hpp
Listeners/src/: euclidian_clustering.cpp  lidar_listener.cpp
detectors/aruco_detector/: CMakeLists.txt  README.md  package.xml
detectors/aruco_detector/include/aruco_detector/: aruco_detector.hpp  aruco_detector_ros.hpp  aruco_file_logger.hpp
detectors/aruco_detector/launch/: aruco_detector_launch.py
detectors/aruco_detector/params/: aruco_parameters.yaml
detectors/aruco_detector/src/: aruco_detector.cpp  aruco_detector_node.cpp  aruco_detector_ros.cpp  aruco_file_logger.cpp
detectors/aruco_detector/test/: CMakeLists.txt  aruco_detector_test.cpp
detectors/pcl_detector/: CMakeLists.txt  README.md  package.xml
detectors/pcl_detector/cfg/: Detector.cfg
detectors/pcl_detector/include/pcl_detector/: geometry_processor.hpp  land_masking.hpp  pcl_detector.hpp  pcl_detector_interface.hpp  pcl_detector_ros.hpp  pcl_processor.hpp
detectors/pcl_detector/include/pcl_detector/detectors/: dbscan_detector.hpp  euclidean_clustering.hpp  gmm_detector.hpp  optics_detector.hpp
detectors/pcl_detector/include/pcl_detector/sample_consensus/: model_types.h  msac.h  msac.hpp  sac.h  sac_model.h  sac_model_line_2d.h  sac_model_line_2d.hpp
detectors/pcl_detector/launch/: detector.launch  pcl_detector_launch.py
detectors/pcl_detector/params/: example_params.yaml  pcl_detector_params.yaml
detectors/pcl_detector/src/: dbscan_detector.cpp  euclidean_clustering.cpp  geometry_processor.cpp  gmm_detector.cpp  kernel.cu  land_masking.cpp  optics_detector.cpp  pcl_cpu_processor.cpp  pcl_detector_ros.cpp  pcl_detector_ros_node.cpp  pcl_gpu_processor.cpp
detectors/pcl_detector/test/: CMakeLists.txt  pcl_cpu_processor_test.cpp
detectors/sift_cpp/: CMakeLists.txt  README.md  package.xml
detectors/sift_cpp/src/: image_repub.cpp  orb_node.cpp  sift_node.cpp
detectors/sift_feature_detection/scripts/: sift_node.py
image_filters/: CMakeLists.txt  README.md  package.xml
image_filters/include/image_filters/: image_filtering_ros.hpp  image_processing.hpp
image_filters/launch/: image_filtering_launch.py
image_filters/params/: image_filter_parameters.yaml
image_filters/src/: image_filtering_node.cpp  image_filtering_ros.cpp  image_processing.cpp
image_filters/test/: CMakeLists.txt
lidar/bags/rosbag2_2023_10_11-18_14_39/: metadata.yaml  rosbag2_2023_10_11-18_14_39_0.db3
lidar/bags/rosbag2_2023_10_11-19_36_19/: metadata.yaml  rosbag2_2023_10_11-19_36_19_0.db3
pcl_detector/: CMakeLists.txt  README.md  package.xml  readme.md
pcl_detector/include/pcl_detector/: pcl_detector_interface.hpp  pcl_detector_ros.hpp
pcl_detector/include/pcl_detector/detectors/: dbscan_detector.hpp  euclidean_clustering.hpp
pcl_detector/launch/: launch.py
pcl_detector/params/: example_params.yaml  pcl_detector_params.yaml
pcl_detector/src/: README.md  dbscan_detector.cpp  euclidean_clustering.cpp  pcl_detector_ros.cpp  pcl_detector_ros_node.cpp
pointcloud_processing/scripts/: point_cloud2.py  pointcloud_mapping.py  pointcloud_processing_node.py
slam/sonar-mapping/: CMakeLists.txt  README.md  package.xml
slam/sonar-mapping/config/: config.yaml
slam/sonar-mapping/include/: math_functions.hpp  sonar_mapping_node.hpp
slam/sonar-mapping/launch/: sonar_mapping.launch
slam/sonar-mapping/src/: math_functions.cpp  sonar_mapping_node.cpp
target-classifier/: CMakeLists.txt  README.md  package.xml
target-classifier/include/target_classifier/: auction_algorithm.hpp  target_classifier_ros.hpp
target-classifier/src/: auction_algorithm.cpp  target_classifier_ros.cpp  target_classifier_ros_node.cpp
target-classifier/test/: CMakeLists.txt  auction_algorithm_test.cpp
target-tracking/: CMakeLists.txt  README.md  package.xml
target-tracking/include/target_tracking/: target_tracking_ros.hpp  track_manager.hpp
target-tracking/launch/: target_tracking_launch.py
target-tracking/params/: target_tracking_params.yaml
target-tracking/src/: target_tracking_ros.cpp  target_tracking_ros_node.cpp  track_manager.cpp
wall-tracking/: CMakeLists.txt  package.xml
wall-tracking/include/wall_tracking/: wall_manager.hpp  wall_model.hpp  wall_tracking_ros.hpp
wall-tracking/launch/: wall_tracking_launch.py
wall-tracking/params/: wall_tracking_params.yaml
wall-tracking/src/: wall_manager.cpp  wall_tracking_ros.cpp  wall_tracking_ros_node.cpp
